<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/nome_completo"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/telefonetitle"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/telefoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/telefone"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/e_mailtitle"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/sexotitle"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/femininoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feminino"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/masculinoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_weight="1"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/cidadetitle"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/cidadeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/cidade"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/uftitle"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <Spinner
        android:id="@+id/unidadeFederalSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/unidadeFederal"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/limparBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:padding="5dp"
        android:layout_margin="5dp"/>

</LinearLayout>